# golback

./: Cargo.toml  README.md
patterns/: glider.rle
src/: lib.rs  universe.rs
